add[resource card]:master dataviz file direct download (#1565)
* master charts file and anatomy image fixes

* Legend image updates

* copy update on anatomy

* updated master link

* Update src/pages/data-visualization/chart-anatomy/index.mdx

Co-authored-by: Eliad Moosavi <theiliad@users.noreply.github.com>

* legend button line

* Link text change

Co-authored-by: Eliad Moosavi <theiliad@users.noreply.github.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/data-visualization/chart-anatomy/index.mdx
+++ b/src/pages/data-visualization/chart-anatomy/index.mdx
@@ -109,18 +109,18 @@ include radar and solar charts.
   <Aside>
     1. Chart title<br/>
     2. Label<br/>
-    3. Legends<br/>
-    4. Graph frame<br/>
-    5. Big number<br/>
-    6. Tooltip<br/>
+    3. Tooltip<br/>
+    4. Legend<br/>
+    5. Graph frame<br/>
+    6. Big number<br/>
   </Aside>
 </Column>
 </Row>
 
 #### Labels
 
-In a circular chart, labels offer the percentage value of the whole for an
-individual category.
+In a circular chart, labels offer the percentage value of the whole for an individual category. When the graphic translation of the data is less than 3 degrees, a callout is used to clearly associate the label with the slice. If the data translates as less than 1 degree, a slice will not be rendered on the chart, the data would not be keyboard accessible or available in a tooltip either. The only way to see the data in this scenario would be via a data table, a feature that we'd like to implement for all charts to enhance accessibility.
+
 
 #### Big number or KPI
 
