--- a/src/pages/data-visualization/legends/index.mdx
+++ b/src/pages/data-visualization/legends/index.mdx
@@ -130,18 +130,20 @@ clustered.
 
 #### Right
 
-Position the legend to the right of the chart when space is plentiful, or when
-you would like to provide the maximum context.
+Position the legend to the right of the chart when space is plentiful, or when you would like to provide the maximum context. In mobile, the legend could revert to a stack.
+
 
 <Row>
 <Column  colLg={8} colMd={6} colSm={4}>
+
 <ArtDirection>
 
-![Legends bahvior highlight on hover](images/legends-pos-3sm.png)
-![Legends bahvior highlight on hover](images/legends-pos-3.png)
-![Legends bahvior highlight on hover](images/legends-pos-3.png)
+![Legends behavior highlight on hover](images/legends-pos-3sm.png)
+![Legends behavior highlight on hover](images/legends-pos-3.png)
+![Legends behavior highlight on hover](images/legends-pos-3.png)
 
 </ArtDirection>
+
 </Column>
 </Row>
 
@@ -153,16 +155,16 @@ Since geospatial charts can vary drastically in appearance, the legend can be
 placed in either side of the chart, top- or bottom-aligned, whatever best
 accomodates the content.
 
-To demonstrate the legend’s background opacity, we chose to place the legend at
-the top left in the chart below.
+To demonstrate the legend’s background opacity, we chose to place the legend at the top left in the chart below. See the Master data visulization design file for more detail about geospatial legends.
+
 
 <Row>
 <Column  colLg={12} colMd={6} colSm={4}>
 <ArtDirection>
 
-![Legends bahvior highlight on hover](images/legends-pos-5sm.png)
-![Legends bahvior highlight on hover](images/legends-pos-5.png)
-![Legends bahvior highlight on hover](images/legends-pos-5.png)
+![Legends behavior highlight on hover](images/legends-pos-5sm.png)
+![Legends behavior highlight on hover](images/legends-pos-5.png)
+![Legends behavior highlight on hover](images/legends-pos-5.png)
 
 </ArtDirection>
 </Column>
@@ -180,9 +182,9 @@ categories in the chart to 30 percent.
 
 <ArtDirection>
 
-![Legends bahvior highlight on hover](images/legends-behavior-1-sm.png)
-![Legends bahvior highlight on hover](images/legends-behavior-1.png)
-![Legends bahvior highlight on hover](images/legends-behavior-1.png)
+![Legends behavior highlight on hover](images/legends-behavior-1-sm.png)
+![Legends behavior highlight on hover](images/legends-behavior-1.png)
+![Legends behavior highlight on hover](images/legends-behavior-1.png)
 
 </ArtDirection>
 
