--- a/src/pages/data-visualization/getting-started/index.mdx
+++ b/src/pages/data-visualization/getting-started/index.mdx
@@ -39,11 +39,14 @@ requests to the
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="charting design specifications (Coming soon)"
-    disabled>
+    subTitle="Master data visualization design file WIP (IBM internal link)"
+    href="https://ibm.box.com/s/w7fhywdpfb56t2l61ab8uoo93g6jaec5"
+    actionIcon="download"
+  >
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
+
 
 <Column colLg={4} colMd={4} noGutterSm>
 <ResourceCard
