--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -267,13 +267,14 @@ visit the [Get started](/get-started/design/sketch) guide.
 </Column>
 </Row>
 
-### Data visualizations
+### Data visualization
 
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
-      subTitle="Download WIP charting design specifications (IBM internal link)"
-      disabled>
+      subTitle="Master data visualization design file WIP (IBM internal link)"
+      href="https://ibm.box.com/s/w7fhywdpfb56t2l61ab8uoo93g6jaec5"
+      actionIcon="download">
       <MdxIcon name="sketch" />
     </ResourceCard>
   </Column>
