Apply suggestions from code review
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/components/inline-loading/usage.mdx
+++ b/src/pages/components/inline-loading/usage.mdx
@@ -31,11 +31,11 @@ user that their request is being processed. Although they do not provide details
 about what is occurring on the back-end, they reassure the user that their
 action is being processed.
 
-Common actions that could use inline loading include any create, update, or delete actions that may have a lot of data to process. It can be used in a table, after a primary or secondary button click, or even in a modal.
+Common actions that benefit from inline loading include any create, update, or delete actions that may have a lot of data to process. It can be used in a table, after a primary or secondary button click, or even in a modal.
 
 ### When to use
 
-- Use an inline loading component for any action that cannot be preformed instantly and will only require a short time to process.
+- Use an inline loading component for any action that cannot be performed instantly and will only require a short time to process.
 - Use when retrieving or refreshing small data amounts, such as status.
 
 ### When not to use
@@ -87,7 +87,7 @@ Common actions that could use inline loading include any create, update, or dele
 
 ### Placement
 
-When inline loading temporally replaces content it should appear in the same spot as the content it replaced and maintain the same alignment.
+When inline loading temporarily replaces content, it should appear in the same spot as the content it replaced and maintain the same alignment.
 
 <Row>
 <Column colLg={8}>
@@ -105,11 +105,11 @@ Descriptive loading text for the action is optional, but encouraged. If you have
 
 #### Active loading label
 
-This is the text that appears while the action is happening. The label should tell the user what action is being preformed. For example, if it appears while a form is being save then it should say "Saving ..."
+This is the text that appears while the action is happening. The label should tell the user what action is being performed. For example, if it appears while a form is being save then it should say "Saving ...".
 
 #### Finished loading label
 
-Once the action has finished, the label should change to tell the user that the action was completed successfully. For example, when saving a form it would read "Saved!" upon completion,
+Once the action has finished, the label should change to tell the user that the action was completed successfully. For example, when saving a form it would read "Saved" upon completion.
 
 #### Error loading label
 
@@ -123,7 +123,7 @@ For further content guidance, see Carbon's [content guidelines](<[https://www.ca
 
 ### States
 
-There are four states to inline loading: inactive, active, success, error.
+There are four states to inline loading: inactive, active, success, and error.
 
 <Row>
 <Column colLg={8}>
@@ -143,7 +143,7 @@ The active loading state indicates that the action is still in progress.
 
 #### Success
 
-The success loading state indicates that the action completed successfully. The success state is active for 1.5 seconds before calling a optional function `onSuccess`. Use the `onSuccess` function to refetch new data, close a modal, or reset a form. If no function is specified the success state will last indefinitely.
+The success loading state indicates that the action completed successfully. The success state is active for 1.5 seconds before calling an optional function `onSuccess`. Use the `onSuccess` function to refetch new data, close a modal, or reset a form. If no function is specified the success state will last indefinitely.
 
 #### Error
 
@@ -163,7 +163,7 @@ Any interactive elements associated with the item that is loading should be disa
 
 ### Modifiers
 
-A loading spinner can be used by itself without a label. It is most commonly used this way inside of a field input.
+A loading spinner can be used by itself without a label. It is most commonly used this way inside a field input.
 
 <Row>
 <Column colLg={8}>
