docs: feedback from design rview, event draft info

--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -24,12 +24,11 @@ templates, color palettes, GitHub repos, and design tools.
 
 ## Introduction
 
-Carbon interprets the
-[IBM Design Language](https://www.ibm.com/design/language/) and delivers it
-through tools for designers and developers including guidance, tooling,
-components, and support. Take the time to read the design language site so that
-you fully understand what drives IBM's design philosophy and principles, and can
-make informed decisions in your product design work.
+Carbon expresses the [IBM Design Language](https://www.ibm.com/design/language/)
+and delivers it through tools for designers and developers including guidance,
+tooling, components, and support. Take the time to read the design language site
+so that you fully understand what drives IBM's design philosophy and principles,
+and can make informed decisions in your product design work.
 
 To use the Sketch libraries you'll find here, you need the **most recent
 version** of [Sketch](<[https://www.sketch.com/](https://www.sketch.com/)>)
