--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -13,4 +13,31 @@ events for learning what’s new, tips and tricks, and leveling up your skills.
 
 </PageDescription>
 
-This page is a work in progress.
+This page is a work in progress. Need to add sign up / contact methods.
+
+### Weekly design playback
+
+#### Every Friday, 2pm Central, One hour
+
+You’ve got some work in progress and you’re ready to open it up and share it
+with a broader audience for honest (and caring!) feedback. Verify that you’re
+working with the grid correctly, that you’re using the right components, that
+you’re using the correct language. Sign up to share, or come along to see other
+work in progress and learn that way.
+
+### Carbon Insiders
+
+#### First Fridays, 9:30am Central, One hour
+
+An open forum for developers in product teams to come together with Carbon
+developers and designers. Talk through questions, challenges, and share ideas
+for building products with Carbon. All topics welcome.
+
+### Design pin-ups
+
+#### Contact us to schedule, Two + hours
+
+Put your screens up in MURAL and step through the flow and page designs with the
+Carbon designers. Great for assessing the overall flow, page layouts, the best
+choices and use of components, content—everything from the big picture to the
+smallest detail!
