--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: News & articles
+title: News & reading
 description:
   Learn about some of Carbon's bigger projects and take a peek at our current
   reading list of favorite books and articles.
@@ -13,13 +13,11 @@ reading list of favorite books and articles.
 </PageDescription>
 
 <AnchorLinks>
-  <AnchorLink>Latest news</AnchorLink>
+  <AnchorLink>Medium articles</AnchorLink>
   <AnchorLink>What we're reading</AnchorLink>
 </AnchorLinks>
 
-## Latest news
-
-### Medium articles
+## Medium articles
 
 <Row>
 
