docs: contact us updated content

--- a/src/pages/help/contact-us/index.mdx
+++ b/src/pages/help/contact-us/index.mdx
@@ -1,35 +1,87 @@
 ---
 title: Contact us
 description:
-  The Carbon core team provides support for users of the design system. Some of
-  our common channels for this include GitHub, Slack, Twitter, and email.
+  Have a question about our design system? The Carbon team is here to help you.
+  Before you start, be sure to check out the following resources to see if we've
+  already got your topic covered.
 ---
 
-## Questions
+<PageDescription>
 
-The Carbon core team provides support for users of the design system. Find the
-use case below that most closely matches your own for the quickest response.
+Have a question about our design system? The Carbon team is here to help you.
+Before you start, be sure to check out the following resources to see if we've
+already got your topic covered.
+
+</PageDescription>
+
+<AnchorLinks>
+
+<AnchorLink>Check existing resources</AnchorLink>
+<AnchorLink>Provide a suggestion or contribution</AnchorLink>
+<AnchorLink>Start a new discussion</AnchorLink>
+
+</AnchorLinks>
+
+## Check existing resources
 
 ### Carbon website
 
 Please take some time to explore the content on this website before engaging the
-Carbon team. The site is very comprehensive and most of the guidelines and
-components are well documented.
+Carbon team. The site is comprehensive and most of the guidelines and components
+are well documented.
 
 ### Frequently asked questions
 
 Answers to the most common questions about the design system can be found in the
-[Carbon FAQ](faq).
+[Carbon FAQs](faqs/index.mdx).
+
+The Carbon core team provides support for users of the design system. Find the
+use case below that most closely matches your own for the quickest response.
+
+## Provide a suggestion or contribution
+
+### GitHub issues
+
+If you have a bug report, suggestion, or general feedback, please create a
+GitHub issue.
+
+#### Design issues
+
+- [Design kit](https://github.com/carbon-design-system/carbon-design-kit/issues/new)
+- [Icons](https://github.com/carbon-design-system/carbon-icons/issues/new)
+- [Website](https://github.com/carbon-design-system/carbon-website/issues/new/choose)
+- [Components](https://github.com/carbon-design-system/carbon/issues/new/choose)
+- [Elements](https://github.com/carbon-design-system/carbon/issues/new/choose)
+- [Charts](https://github.com/carbon-design-system/carbon-charts/issues/new)
+- [Everything else](https://github.com/carbon-design-system/issue-tracking/issues/new)
+
+#### Code issues
+
+- [carbon-components](https://github.com/carbon-design-system/carbon/issues/new/choose)
+- [carbon-components-react](https://github.com/carbon-design-system/carbon/tree/master/packages/react/issues/new/choose)
+- [carbon-components-angular](https://github.com/IBM/carbon-components-angular/issues/new)
+- [carbon-components-vue](https://github.com/carbon-design-system/carbon-components-vue/issues/new)
+- [carbon-charts](https://github.com/carbon-design-system/carbon-charts/issues/new)
+
+### GitHub pull requests
+
+If you have a specific fix or a contribution, you can generate a pull request in
+the appropriate Carbon repo:
+
+\*\* include a list here, check with Alison what should be included
+
+## Start a new discussion
 
 ### Slack channels
 
-_Internal IBM users only._ The Carbon core team maintains the following channels
-and will provide support as time permits.
+_For internal IBM users only._ The Carbon core team maintains the following
+channels and will provide support as time permits.
 
 **Please try searching the Slack channel for your topic first.** Slack’s
 filtering feature will return more targeted and relevant results. For instance,
 if you have a technical question about the `DataTable` component, you could
 search “DataTable” in Slack and then filter by the #carbon-components channel.
+
 _Tip: You can start a new search directly from the message box using the `/s`
 slash command._
 
@@ -49,33 +101,3 @@ as quickly as possible.
 
 The Carbon team can also be reached on Twitter:
 [@\_carbondesign](https://twitter.com/_carbondesign?lang=en)
-
-## Suggestions or contributions
-
-### GitHub pull requests
-
-If you have a specific fix or contribution, you can generate a pull request in
-the appropriate Carbon repo.
-
-### GitHub issues
-
-Bug reports, feature requests, and general feedback can be delivered to the
-Carbon team via the creation of a GitHub issue.
-
-#### Design issues
-
-- [Design kit](https://github.com/carbon-design-system/carbon-design-kit/issues/new)
-- [Icons](https://github.com/carbon-design-system/carbon-icons/issues/new)
-- [Website](https://github.com/carbon-design-system/carbon-website/issues/new/choose)
-- [Components](https://github.com/carbon-design-system/carbon/issues/new/choose)
-- [Elements](https://github.com/carbon-design-system/carbon/issues/new/choose)
-- [Charts](https://github.com/carbon-design-system/carbon-charts/issues/new)
-- [Everything else](https://github.com/carbon-design-system/issue-tracking/issues/new)
-
-#### Code issues
-
-- [carbon-components](https://github.com/carbon-design-system/carbon/issues/new/choose)
-- [carbon-components-react](https://github.com/carbon-design-system/carbon/tree/master/packages/react/issues/new/choose)
-- [carbon-components-angular](https://github.com/IBM/carbon-components-angular/issues/new)
-- [carbon-components-vue](https://github.com/carbon-design-system/carbon-components-vue/issues/new)
-- [carbon-charts](https://github.com/carbon-design-system/carbon-charts/issues/new)
