--- a/src/pages/help/contact-us/index.mdx
+++ b/src/pages/help/contact-us/index.mdx
@@ -33,7 +33,7 @@ are well documented.
 ### Frequently asked questions
 
 Answers to the most common questions about the design system can be found in the
-[Carbon FAQs](faqs/index.mdx).
+[Carbon FAQs](faqs).
 
 The Carbon core team provides support for users of the design system. Find the
 use case below that most closely matches your own for the quickest response.
