docs: nav tweaks

--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Design resources
+title: Other resources
 description:
   Everything you need to learn about and work with Carbon, including Sketch
   libraries and templates, color palettes, fonts, GitHub repos, and design
