docs: nav tweaks

--- a/src/pages/designing/kits/adobe-xd.mdx
+++ b/src/pages/designing/kits/adobe-xd.mdx
@@ -1,5 +1,5 @@
 ---
-title: Kits
+title: Design kits
 description:
   Rapidly build beautiful and accessible experiences. The Carbon kit contains
   all resources you need to get started.
