docs: placeholder case studies text

--- a/src/pages/all-about-carbon/case-studies.mdx
+++ b/src/pages/all-about-carbon/case-studies.mdx
@@ -1,11 +1,23 @@
 ---
 title: Case studies
-description: Introductory text for the new case studies page.
+description:
+  These case studies explore the adoption and implementation of Carbon in
+  products. Use the them to build your understanding of how Carbon is applied in
+  real-world products and to inspire your own adoption of Carbon.
 ---
 
 <PageDescription>
 
-Introductory text for the new case studies page. We'll be sharing more case
-studies here as they become available.
+These case studies explore the adoption and implementation of Carbon in
+products. Use the them to build your understanding of how Carbon is applied in
+real-world products and to inspire your own adoption of Carbon.
 
 </PageDescription>
+
+Placeholder text:
+
+These case studies explore the adoption and implementation of Carbon in
+products. Use the them to build your understanding of how Carbon is applied in
+real-world products and to inspire your own adoption of Carbon.
+
+We’ll be sharing more case studies as they become available.
