--- a/src/pages/data-visualization/getting-started/index.mdx
+++ b/src/pages/data-visualization/getting-started/index.mdx
@@ -39,23 +39,13 @@ requests to the
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Master data visualization design file WIP (IBM internal link)"
-    href="https://ibm.box.com/s/w7fhywdpfb56t2l61ab8uoo93g6jaec5"
-    actionIcon="download"
-  >
-    <MdxIcon name="sketch" />
-  </ResourceCard>
-</Column>
-
-
-<Column colLg={4} colMd={4} noGutterSm>
-<ResourceCard
-    subTitle="Data visualization color palettes (IBM internal link)"
-    href="https://ibm.box.com/s/3mt8fshtgy70r7rhxjhfo3gbdt0n3x5y"
+    subTitle="Data-visualization master Sketch file (WIP)"
+    href="https://github.com/carbon-design-system/carbon-design-kit/tree/master/Carbon%20Design%20Kit%20-%2010.10.0/data-visualization"
     actionIcon="download">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
+
 </Row>
 
 ### Getting started tutorials
