remove hyphen from data-visualization

--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -272,7 +272,7 @@ visit the [Get started](/get-started/design/sketch) guide.
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
-      subTitle="Data-visualization master Sketch file (WIP)"
+      subTitle="Data visualization master Sketch file (WIP)"
       href="https://github.com/carbon-design-system/carbon-design-kit/tree/master/Carbon%20Design%20Kit%20-%2010.10.0/data-visualization"
       actionIcon="download">
       <MdxIcon name="sketch" />
