--- a/src/pages/data-visualization/getting-started/index.mdx
+++ b/src/pages/data-visualization/getting-started/index.mdx
@@ -39,7 +39,7 @@ requests to the
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Data-visualization master Sketch file (WIP)"
+    subTitle="Data visualization master Sketch file (WIP)"
     href="https://github.com/carbon-design-system/carbon-design-kit/tree/master/Carbon%20Design%20Kit%20-%2010.10.0/data-visualization"
     actionIcon="download">
     <MdxIcon name="sketch" />
