feat: add chart in action gallery

--- a/src/pages/data-visualization/color-palettes/index.mdx
+++ b/src/pages/data-visualization/color-palettes/index.mdx
@@ -97,3 +97,51 @@ For the full list of approved gradient options, see the IBM Design Language [Col
 
 </Column>
 </Row>
+
+## Color in action
+
+See the IBM Design color palette in action across multiple business units and applications. Deliberate hits of color are composed with rich neutrals for a well-balanced cohesive experience.
+
+<ImageGallery>
+<ImageGalleryImage col={6} title="Bubble chart in action" alt="example of a bubble chart">
+
+![example of a bubble chart](images/color_gallery_1.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={6} title="Radar chart in action" alt="example of a radar chart">
+
+![example of a radar chart](images/color_gallery_2.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={6} title="Donut chart in action" alt="exmaple of a donut chart">
+
+![exmaple of a donut chart](images/color_gallery_3.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={6} title="Stream chart in action" alt="exmaple of a stream chart">
+
+![exmaple of a stream chart](images/color_gallery_4.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={12} title="Heat map in action" alt="exmaple of a heat map">
+
+![exmaple of a heat map](images/color_gallery_5.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={12} title="Proportional diagram in action" alt="exmaple of a proportional diagram">
+
+![exmaple of a proportional diagram](images/color_gallery_6.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={12} title="Alluvial diagram in action" alt="exmaple of an alluvial diagram">
+
+![exmaple of an alluvial diagram](images/color_gallery_7.png)
+
+</ImageGalleryImage>
+</ImageGallery>
