docs: about carbon links update

--- a/src/pages/all-about-carbon/what-is-carbon.mdx
+++ b/src/pages/all-about-carbon/what-is-carbon.mdx
@@ -35,11 +35,13 @@ making the design and development process more efficient and focused,
 establishing a shared vocabulary between designer and developer, and providing
 clear, discoverable guidance around design and development best practices.
 
-The design system is built [React](/get-started/develop/react) first. We also
-support core parts of the system in [vanilla JS](/get-started/develop/vanilla),
-[Angular](/get-started/develop/angular), and [Vue](/get-started/develop/vue). If
-you’re using a different framework, you can still build components by following
-our guidelines for [other frameworks](/get-started/develop/other-frameworks).
+The design system is built [React](/developing/frameworks/react) first. We also
+support core parts of the system in
+[vanilla JS](/developing/frameworks/vanilla),
+[Angular](/developing/frameworks/angular), and
+[Vue](/developing/frameworks/vue). If you’re using a different framework, you
+can still build components by following our guidelines for
+[other frameworks](/developing/frameworks/other-frameworks).
 
 ## Guiding principles
 
