docs: link fixes, smoothing

--- a/src/pages/designing/kits/sketch.mdx
+++ b/src/pages/designing/kits/sketch.mdx
@@ -27,7 +27,7 @@ resources you need to get started.
 #### 1. **Install Sketch**.
 
 To design with Carbon you must have the **most recent version** of
-[Sketch](https://www.sketchapp.com/) installed.
+[Sketch](https://www.sketch.com/) installed.
 
 #### 2. **Choose a theme**.
 
