--- a/src/pages/designing/kits/adobe-xd.mdx
+++ b/src/pages/designing/kits/adobe-xd.mdx
@@ -66,7 +66,7 @@ If you’re brand new to Adobe XD, they offer some great
 Enhancements to the kit will be rolling out in the future. When a new version of
 the library is available, you will need to download the new file to replace the
 old one. Releases will be posted to the
-[GitHub repo](https://github.com/IBM/design-kit)
+[GitHub repo](https://github.com/IBM/design-kit).
 
 ### Help
 
