--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -133,4 +133,16 @@ your framework of choice.
 
   </ResourceCard>
 </Column>
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Color contrast checker"
+    href="https://marijohannessen.github.io/color-contrast-checker/"
+    >
+
+![](/images/color-contrast-icon.png)
+
+  </ResourceCard>
+</Column>
+
 </Row>
