--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -44,7 +44,7 @@ functionality—dropdown, multiselect, and combo box.
 | Type                        | Purpose                                                                                                  |
 | --------------------------- | -------------------------------------------------------------------------------------------------------- |
 | [Dropdown](#dropdown)       | Allows the user to select one option from a list.                                                        |
-| [Multi-select](#multiselect)| Allows the user to select multiple options from a list and filter.                                       |
+| [Multiselect](#multiselect)| Allows the user to select multiple options from a list and filter.                                       |
 | [Combo box](#combobox)      | Allows a user to enter any value, or select a value from a list of suggested, likely, or desired values. |
 
 #### When to use
