(fix) typo on dropdown usage tab (#1585)
* (fix) typo on dropdown usgae

Fixed typo and links

* Update src/pages/components/dropdown/usage.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* update combo box link

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -44,8 +44,8 @@ functionality—dropdown, multiselect, and combo box.
 | Type                        | Purpose                                                                                                  |
 | --------------------------- | -------------------------------------------------------------------------------------------------------- |
 | [Dropdown](#dropdown)       | Allows the user to select one option from a list.                                                        |
-| [Multiselect](#multiselect) | Allows the user to select multiple options from a list and filter.                                       |
-| [Combo box](#combo box)     | Allows a user to enter any value, or select a value from a list of suggested, likely, or desired values. |
+| [Multiselect](#multiselect)| Allows the user to select multiple options from a list and filter.                                       |
+| [Combo box](#combo-box)      | Allows a user to enter any value, or select a value from a list of suggested, likely, or desired values. |
 
 #### When to use
 
